--- a/1.html
+++ b/1.html
@@ -5,25 +5,39 @@
 <meta charset="utf-8">
 </head>
 
+<link rel="stylesheet" href="style.css">
+
 <body>
 <h1><a href="index.html">병실 생활 원인</a></h1>    
-<ol>
-    <li><a href="1.html">흉골 정의</a></li>
-    <li><a href="2.html" target="_blank">부실인간의 특징</a></li>
-    <li><a href="3.html" target="_blank">흉골 사진</a></li>
-</ol>
+<div id="grid">
+    <ol>
+        <li><a href="1.html">흉골 정의</a></li>
+        <li><a href="2.html">부실인간의 특징</a></li>
+        <li><a href="3.html">흉골 사진</a></li>
+    </ol>
 
-<h2>흉골</h2>
-<strong>흉골</strong>은 몸에서 <u>앞쪽 기둥</u>역할을 하기 때문에 부러지면 부실공사 인간이 된다.
+    <!--
+    <h1><a href="index.html"><font color="red">병실 생활 원인</font></a></h1>    
+    <ol>
+        <li><a href="1.html">흉골 정의</a></li>
+        <li><a href="2.html" target="_blank">부실인간의 특징</a></li>
+        <li><a href="3.html" target="_blank">흉골 사진</a></li>
+    </ol>
+    -->
+    <div id="article">
+        <h2>흉골</h2>
+        <strong>흉골</strong>은 몸에서 <u>앞쪽 기둥</u>역할을 하기 때문에 부러지면 부실공사 인간이 된다.
 
-<br>그러므로 흉골이 금간 김수연은 다음과 같은 행동을 할 수 없다.
-<p>첫 번째로 바닥에 있는 물건을 주울 수 없다.</p>
-<p>두 번째로 벌떡 일어날 때 통증을 느낀다.</p>
-세 번째로 무거운 짐들을 들지 못하고 힘을 조금이라도 쓰게 될 경우 통증을 느낄 수 있다. 
-<p>마지막으로 자는 도중 자세를 바꾸다 통증을 느껴서 잠에서 깨기도 한다.</p>
-<img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxNzA3MDJfMTg3%2FMDAxNDk4OTcxMTczMTg4.D9AoXWLcBBUSmOV-WQhOjW_WslwFvGlvbKOfnhV2h2kg.n4KxlK7BWGQ_m3U0v5pfAW2ldLBH-XUccuVeb-EKef8g.JPEG.ssportsat%2FNaverBlog_20170702_135252_05.jpg&type=sc960_832" width="50%">
-<a href="https://www.w3.org/TR/2011/WD-html5-20110405/" 
+        <br>그러므로 흉골이 금간 김수연은 다음과 같은 행동을 할 수 없다.
+        <p>첫 번째로 바닥에 있는 물건을 주울 수 없다.</p>
+        <p>두 번째로 벌떡 일어날 때 통증을 느낀다.</p>
+        세 번째로 무거운 짐들을 들지 못하고 힘을 조금이라도 쓰게 될 경우 통증을 느낄 수 있다. 
+        <p>마지막으로 자는 도중 자세를 바꾸다 통증을 느껴서 잠에서 깨기도 한다.</p>
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxNzA3MDJfMTg3%2FMDAxNDk4OTcxMTczMTg4.D9AoXWLcBBUSmOV-WQhOjW_WslwFvGlvbKOfnhV2h2kg.n4KxlK7BWGQ_m3U0v5pfAW2ldLBH-XUccuVeb-EKef8g.JPEG.ssportsat%2FNaverBlog_20170702_135252_05.jpg&type=sc960_832" width="30%">
+        <a href="https://www.w3.org/TR/2011/WD-html5-20110405/" 
         target="_blank" title="흉골인 줄 알았는데 속았지?">
         <img src="빠사삭.jpg" width="200" > </a>
+    </div>
+</div>
 </body>
 </html>
