--- a/3.html
+++ b/3.html
@@ -5,19 +5,24 @@
 <meta charset="utf-8">
 </head>
 
+<link rel="stylesheet" href="style.css">
+
 <body>
 <h1><a href="index.html">병실 생활 원인</a></h1>    
-<ol>
-    <li><a href="1.html">흉골 정의</a></li>
-    <li><a href="2.html">부실인간의 특징</a></li>
-    <li><a href="3.html">흉골 사진</a></li>
-</ol>
-
-<h2>흉골 사진</h2>
-<p>흉골사진은 아래와 같다 명치뼈임 신기하지?</p>
-<img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxNzA3MDJfMTg3%2FMDAxNDk4OTcxMTczMTg4.D9AoXWLcBBUSmOV-WQhOjW_WslwFvGlvbKOfnhV2h2kg.n4KxlK7BWGQ_m3U0v5pfAW2ldLBH-XUccuVeb-EKef8g.JPEG.ssportsat%2FNaverBlog_20170702_135252_05.jpg&type=sc960_832" width="50%">
-<a href="https://www.w3.org/TR/2011/WD-html5-20110405/" 
+<div id="grid">
+    <ol>
+        <li><a href="1.html">흉골 정의</a></li>
+        <li><a href="2.html">부실인간의 특징</a></li>
+        <li><a href="3.html">흉골 사진</a></li>
+    </ol>
+    <div id="article">
+    <h2>흉골 사진</h2>
+    <p>흉골사진은 아래와 같다 명치뼈임 신기하지?</p>
+    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxNzA3MDJfMTg3%2FMDAxNDk4OTcxMTczMTg4.D9AoXWLcBBUSmOV-WQhOjW_WslwFvGlvbKOfnhV2h2kg.n4KxlK7BWGQ_m3U0v5pfAW2ldLBH-XUccuVeb-EKef8g.JPEG.ssportsat%2FNaverBlog_20170702_135252_05.jpg&type=sc960_832" width="50%">
+    <a href="https://www.w3.org/TR/2011/WD-html5-20110405/" 
         target="_blank" title="흉골인 줄 알았는데 속았지?">
         <img src="빠사삭.jpg" width="200" > </a>
+    </div>
+</div>    
 </body>
 </html>
