--- a/2.html
+++ b/2.html
@@ -4,16 +4,20 @@
 <title>부실인간</title>
 <meta charset="utf-8">
 </head>
+<link rel="stylesheet" href="style.css">
 
 <body>
 <h1><a href="index.html">병실 생활 원인</a></h1>    
-<ol>
-    <li><a href="1.html">흉골 정의</a></li>
-    <li><a href="2.html">부실인간의 특징</a></li>
-    <li><a href="3.html">흉골 사진</a></li>
-</ol>
-
-<h2>부실인간</h2>
-<p>부실인간은 흉골이 박살난 김수연을 의미한다</p>
+<div id="grid">
+    <ol>
+        <li><a href="1.html">흉골 정의</a></li>
+        <li><a href="2.html">부실인간의 특징</a></li>
+        <li><a href="3.html">흉골 사진</a></li>
+    </ol>
+    <div id="article">
+     <h2>부실인간</h2>
+     <p>부실인간은 흉골이 박살난 김수연을 의미한다</p>
+    </div>
+</div>
 </body>
 </html>
