--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 <head>
 <title>병실생활에 오신 걸 환영합니다</title>
 <meta charset="utf-8">
-</head>
 
+<link rel="stylesheet" href="style.css">
+
+</head>
+<link rel="stylesheet" href="style.css">
 <body>
 <h1><a href="index.html">병실 생활 원인</a></h1>    
-<ol>
-    <li><a href="1.html">흉골 정의</a></li>
-    <li><a href="2.html">부실인간의 특징</a></li>
-    <li><a href="3.html">흉골 사진</a></li>
-</ol>
-
-<h2>병실생활</h2>
-<p>병실생활은 맛없는 밥과 함께라 행복해요^^</p>
+<div id="grid">
+    <ol>
+        <li><a href="1.html">흉골 정의</a></li>
+        <li><a href="2.html">부실인간의 특징</a></li>
+        <li><a href="3.html">흉골 사진</a></li>
+    </ol>
+ <div id="article">
+    <h2>병실생활</h2>
+    <p>병실생활은 맛없는 밥과 함께라 행복해요^^</p>
+ </div>
+</div>
 </body>
 </html>
